test/many-resolve-errors.err.expect
test/many-resolve-errors.ktn:1:1: compile error: undefined word: some_undefined_name
test/many-resolve-errors.ktn:4:3: compile error: undefined word: some_undefined_name
test/many-resolve-errors.ktn:7:3: compile error: undefined word: some_other_undefined_name
test/many-resolve-errors.ktn:9:7: compile error: undefined word: y
test/many-resolve-errors.ktn:9:9: compile error: undefined word: y
test/many-resolve-errors.ktn:9:11: compile error: undefined word: z
test/many-resolve-errors.ktn:10:7: compile error: undefined word: z
test/many-resolve-errors.ktn:10:9: compile error: undefined word: z
test/many-resolve-errors.ktn:13:4: compile error: undefined word: bad
test/many-resolve-errors.ktn:13:14: compile error: undefined word: hi
test/many-resolve-errors.ktn:13:17: compile error: undefined word: hello
